packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/21_output_transform_only.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>Output Transform Only</aces:description>
        <aces:author>
            <aces:name>Viewing Pipeline</aces:name>
            <aces:emailAddress>pipeline@studio.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:89ede59c-0d66-4396-bc7a-3d1080221bc1</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Minimal Viewing Transform</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:2438b2c0-7f76-4bec-a987-303d94095700</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>1</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:outputTransform applied="false">
            <aces:description>Simple Rec.709 Viewing Transform</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
