packages/aces-amf-lib/tests/Generated_Samples_AMF/invalid_AMFs/invalid_09_parent_directory_references.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>INVALID: Parent Directory References</aces:description>
        <aces:author>
            <aces:name>Test Suite</aces:name>
            <aces:emailAddress>test@example.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:eaaf62ce-c999-44fb-99dc-a98b79d468dc</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Testing Directory Traversal Security</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:6be4e6d0-c4df-4d81-bfce-9284c4eba98f</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>Test IDT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:CSC.Canon.C300mk3-CanonLog3-CinemaGamut_to_ACES.a2.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="true">
            <aces:description>Look with Parent Directory Traversal</aces:description>
            <aces:file>..%2F..%2Funsafe%2Fpath%2Flook.cube</aces:file>
        </aces:lookTransform>
        <aces:outputTransform applied="true">
            <aces:description>Test ODT</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.Academy.Rec709-D65_100nit_in_Rec709-D65_BT1886.a2.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
